Fix bug 96232, crash while typing if tooltip is showing. Add kung fu death grip on the nsMacWindow. r=pinkerton/brade, sr=brendan, a=drivers